Key Indicator for motion paths not updating for objects #74605

Closed
opened 2020-03-10 05:38:57 +01:00 by CobraA · 9 comments

System Information
Windows 10 64 Bits.
Graphics card GeForce GTX 1080 Ti.

Blender Version
Broken: version: 2.82.7 and 2.83.7 hash: 04e9ba7169
Worked: 2.81 & 2.80

Short description of error
Key indicator or whatever it's called doesn't update realtime for none armature objects, I remembered that it worked in 2.81 & 2.80 for most objects,if you have Autokey on and set motion paths then you can move the indicator of that key and preview where it could be in the next position.

{F8398477 size = full}
Exact steps for others to reproduce the error
Open the file and move the sphere and see that the key indicator doesn't come along, only after mouse release.
But when you move the bone the indicator comes along in the correct way.

I tested the file in 2.80,2.81,.2.82 and 2.83 and the last two versions seems the behavior has changed.
Bug or not that's the question.
Anim.blend

**System Information** Windows 10 64 Bits. Graphics card GeForce GTX 1080 Ti. **Blender Version** Broken: version: 2.82.7 and 2.83.7 hash: 04e9ba7169c0 Worked: 2.81 & 2.80 **Short description of error** Key indicator or whatever it's called doesn't update realtime for none armature objects, I remembered that it worked in 2.81 & 2.80 for most objects,if you have Autokey on and set motion paths then you can move the indicator of that key and preview where it could be in the next position. {[F8398477](https://archive.blender.org/developer/F8398477/Key.gif) size = full} **Exact steps for others to reproduce the error** Open the file and move the sphere and see that the key indicator doesn't come along, only after mouse release. But when you move the bone the indicator comes along in the correct way. I tested the file in 2.80,2.81,.2.82 and 2.83 and the last two versions seems the behavior has changed. Bug or not that's the question. [Anim.blend](https://archive.blender.org/developer/F8398486/Anim.blend)
Author

Added subscriber: @CobraA

Added subscriber: @CobraA
Member

Added subscribers: @Sergey, @dr.sybren, @lichtwerk

Added subscribers: @Sergey, @dr.sybren, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm (for me, 2.80 works, 2.81 already has this issue though).

Not sure if we keep this report open (or how to classify), since we have this on the list (and for bones this 'live' preview only affects the current frame -- which seems of limited use anyways?):

  • #68901 ( Motion path viewport editing)
  • #68905 (Motion path revamp)

CC @dr.sybren
CC @Sergey

Can confirm (for me, 2.80 works, 2.81 already has this issue though). Not sure if we keep this report open (or how to classify), since we have this on the list (and for bones this 'live' preview only affects the current frame -- which seems of limited use anyways?): - #68901 ( Motion path viewport editing) - #68905 (Motion path revamp) CC @dr.sybren CC @Sergey

@CobraA Thanks for testing with various versions of Blender, that makes it much easier to pinpoint the issue.

Testing the file in 2.80, it shows different motion path problems, so my guess is that the reported behaviour was introduced in a change that actually fixed other issues.

I did some digging, and it seems that this is caused by 4db2a08281. That changed the parameter current_frame_only=true to range=xxxxx_CURRENT_FRAME for bones but range=xxxxx_CHANGED for objects. As animviz_calc_motionpaths() only updates the motion path for the current frame if range=xxxxx_CURRENT_FRAME, this introduced the observed difference between the handling of bones and objects.

This issue can be fixed by this change:

diff --git a/source/blender/editors/transform/transform_generics.c b/source/blender/editors/transform/transform_generics.c
index bb4d50fcf54..716df24f195 100644
--- a/source/blender/editors/transform/transform_generics.c
+++ b/source/blender/editors/transform/transform_generics.c
@@ -1102,7 +1102,7 @@ static void recalcData_objects(TransInfo *t)
 
     if (motionpath_update) {
       /* Update motion paths once for all transformed objects. */
-      ED_objects_recalculate_paths(t->context, t->scene, OBJECT_PATH_CALC_RANGE_CHANGED);
+      ED_objects_recalculate_paths(t->context, t->scene, OBJECT_PATH_CALC_RANGE_CURRENT_FRAME);
     }
 
     if (t->options & CTX_OBMODE_XFORM_SKIP_CHILDREN) {

I'll discuss with @Sergey to see if this is the appropriate fix.

@CobraA Thanks for testing with various versions of Blender, that makes it much easier to pinpoint the issue. Testing the file in 2.80, it shows different motion path problems, so my guess is that the reported behaviour was introduced in a change that actually fixed other issues. I did some digging, and it seems that this is caused by 4db2a08281. That changed the parameter `current_frame_only=true` to `range=xxxxx_CURRENT_FRAME` for bones but `range=xxxxx_CHANGED` for objects. As `animviz_calc_motionpaths()` only updates the motion path for the current frame if `range=xxxxx_CURRENT_FRAME`, this introduced the observed difference between the handling of bones and objects. This issue can be fixed by this change: ``` diff --git a/source/blender/editors/transform/transform_generics.c b/source/blender/editors/transform/transform_generics.c index bb4d50fcf54..716df24f195 100644 --- a/source/blender/editors/transform/transform_generics.c +++ b/source/blender/editors/transform/transform_generics.c @@ -1102,7 +1102,7 @@ static void recalcData_objects(TransInfo *t) if (motionpath_update) { /* Update motion paths once for all transformed objects. */ - ED_objects_recalculate_paths(t->context, t->scene, OBJECT_PATH_CALC_RANGE_CHANGED); + ED_objects_recalculate_paths(t->context, t->scene, OBJECT_PATH_CALC_RANGE_CURRENT_FRAME); } if (t->options & CTX_OBMODE_XFORM_SKIP_CHILDREN) { ``` I'll discuss with @Sergey to see if this is the appropriate fix.

@dr.sybren, good find! Just commit it ;)

@dr.sybren, good find! Just commit it ;)
Sybren A. Stüvel changed title from Key Indicator for motion paths not updating for non-armature objects. to Key Indicator for motion paths not updating for objects 2020-03-12 11:07:32 +01:00
Sybren A. Stüvel self-assigned this 2020-03-12 11:08:25 +01:00

This issue was referenced by 6c707aad6a

This issue was referenced by 6c707aad6a2e0cc6f5d3b561c32fabc2663cdb0e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

@dr.sybren My pleasure, Thank you for taking the time to take a look at it.

@dr.sybren My pleasure, Thank you for taking the time to take a look at it.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74605
No description provided.