Fix T74605 Key Indicator for motion paths not updating for objects

This fixes a functional change in 4db2a08281f8495421938e0b2f6a802420afba36,
which was marked as 'should have non-functional changes only'.